<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/parentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="16dp"
    android:background="@color/background"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Cricket Score"
        android:textAlignment="center"
        android:textColor="@color/foreground"
        android:textSize="36sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@color/foreground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Team A"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvScoreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="No Score"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvBallsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="No Ball Bowled Yet"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/foreground"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Team B"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvScoreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="No Score"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvBallsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="No ball Bowled yet"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/foreground"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btnSelect"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:padding="16dp"
            android:background="@color/foreground"
            android:layout_height="wrap_content"
            android:text="Select"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="@color/white"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textAlignment="center"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/border"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn0"
                android:text="@string/zero"
                style="@style/buttonsScore"
                ></Button>
            <Button
                android:id="@+id/btn1"
                android:text="@string/one"
                style="@style/buttonsScore"
                ></Button>
            <Button
                android:id="@+id/btn2"
                style="@style/buttonsScore"
                android:text="@string/two"
                ></Button>
            <Button
                android:id="@+id/btn3"
                style="@style/buttonsScore"
                android:text="@string/three"
                ></Button>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/buttonsScore"
                android:text="@string/four"
                ></Button>
            <Button
                android:id="@+id/btn5"
                style="@style/buttonsScore"
                android:text="@string/five"
                ></Button>
            <Button
                android:id="@+id/btn6"
                style="@style/buttonsScore"
                android:text="@string/six"
                ></Button>
            <Button
                android:id="@+id/btne"
                style="@style/buttonsScore"
                android:text="@string/extra"
                ></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
      <Button
          android:id="@+id/btnout"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_margin="8dp"
          android:text="@string/out"
          android:background="@color/foreground"
          android:textColor="@color/white"
          />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnReset"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:text="@string/reset"
        android:background="@color/foreground"
        android:textColor="@color/white"
        />
</LinearLayout>
</ScrollView>